# redantic

./: LICENSE  README.md  docker-compose.yml  makefile  pyproject.toml  setup.cfg
.github/workflows/: linters-and-tests.yml  release.yml
pydantic_storage/: storage.py
redantic/: __init__.py  storage.py
tests/: test_dict.py
