[tool.poetry]
name = "redantic"
version = "0.1.0"
description = ""
authors = ["apollon <Apollon76@yandex.ru>"]
readme = "README.md"
packages = [{include = "redantic"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
redis = "^4.3.4"


[tool.poetry.dev-dependencies]
mypy = "^0.982"
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39', 'py310']
line-length = 120